--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Tyson Mote
 email: tyson@bufio.net
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Tyson is a software engineer from Portland, Oregon.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.bufio.net" # the base hostname & protocol for your site, e.g. http://example.com
 
 sass:
   sass_dir: _sass
